<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActividadPrincipal"
    android:stretchColumns="1">

    <TableRow android:background="#128675"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/encabezado_producto"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_column="2"
            android:padding="3dip"
            android:text="@string/encabezado_subtotal"
            android:textColor="@android:color/white" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/producto_jabon" />

        <TextView
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="$2" />
    </TableRow>

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/producto_shampoo" />

        <TextView
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="$10" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/producto_pastas" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="$18" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/producto_detergente" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="$13,4" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/resultado_subtotal"
            android:textColor="#128675"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left"
            android:gravity="right"
            android:padding="3dip"
            android:text="$43,4" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/resultado_envio"
            android:textColor="#128675"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left"
            android:gravity="right"
            android:padding="3dip"
            android:text="$10" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/resultado_cupon"
            android:textColor="#128675"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left"
            android:gravity="right"
            android:padding="3dip"
            android:text="-$5" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/resultado_total"
            android:textColor="#128675"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left"
            android:gravity="right"
            android:padding="3dip"
            android:text="$48,4" />
    </TableRow>

</TableLayout>